--- a/public/scan-multi_deep.html
+++ b/public/scan-multi_deep.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>棚→型 QRスキャン登録_jemmi</title>
+<title>棚→型 QRスキャン登録_air_off</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
   :root {
