--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,64 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<title>QRユーティリティ｜登録・照会・仕様照会</title>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+<title>モード選択</title>
 <style>
-  :root { --bg:#f8f9fa; --bd:#dee2e6; --tx:#212529; --accent:#0a9396; --accent2:#1c7ed6; --accent3:#f59f00; }
-  html,body{margin:0;background:var(--bg);color:var(--tx);font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans JP",sans-serif}
-  .wrap{max-width:880px;margin:0 auto;padding:22px}
-  h1{font-size:clamp(18px,3.8vw,28px);margin:6px 0 16px}
-  .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-  .card{background:#fff;border:1px solid var(--bd);border-radius:16px;padding:18px;box-shadow:0 8px 26px rgba(0,0,0,.05)}
-  .card h2{margin:0 0 8px;font-size:18px}
-  .card p{margin:0 0 12px;color:#6c757d;font-size:14px;min-height:2.2em}
-  a.btn{display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid var(--bd);background:#fff;text-decoration:none;font-weight:700}
-  a.btn.primary{background:var(--accent);color:#fff;border-color:var(--accent)}
-  a.btn.blue{background:var(--accent2);color:#fff;border-color:var(--accent2)}
-  a.btn.amber{background:var(--accent3);color:#fff;border-color:var(--accent3)}
-  footer{margin-top:18px;color:#6c757d;font-size:12px}
+  :root{
+    --bg:#0b0f14;
+    --card:#0f1720;
+    --txt:#e6f0ff;
+    --sub:#9fb3c8;
+    --a:#4f8cff;   /* 調べる */
+    --b:#22c55e;   /* 型を探す   */
+    --c:#f59e0b;   /* 型の場所を登録する */
+  }
+  *{box-sizing:border-box}
+  html,body{margin:0;height:100%;background:var(--bg);color:var(--txt);font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans JP",sans-serif}
+  .wrap{
+    min-height:100dvh;
+    display:flex;flex-direction:column;gap:14px;
+    padding:18px; max-width:640px; margin:0 auto;
+  }
+  .btn{
+    display:block; text-decoration:none; color:#fff;
+    border-radius:18px; padding:22px 20px;
+    font-weight:800; letter-spacing:.08em;
+    font-size:clamp(28px,8vw,44px);
+    text-align:center; line-height:1;
+    box-shadow:0 12px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.04);
+    border:1px solid rgba(255,255,255,.06);
+    transform:translateZ(0);
+    -webkit-tap-highlight-color: transparent;
+  }
+  .btn:active{ transform:scale(.985); }
+  .a{
+    background:
+      radial-gradient(120% 120% at 80% 0%, rgba(255,255,255,.08), transparent 60%),
+      linear-gradient(135deg, #1b3bff 0%, var(--a) 55%, #38bdf8 110%);
+  }
+  .b{
+    background:
+      radial-gradient(120% 120% at 20% 0%, rgba(255,255,255,.08), transparent 60%),
+      linear-gradient(135deg, #059669 0%, var(--b) 55%, #86efac 110%);
+  }
+  .c{
+    background:
+      radial-gradient(120% 120% at 80% 0%, rgba(255,255,255,.08), transparent 60%),
+      linear-gradient(135deg, #b45309 0%, var(--c) 55%, #fca311 110%);
+  }
+  /* 縦積みを前提に、親指タップしやすい高さに */
+  .btn{ min-height:22vh; display:flex; align-items:center; justify-content:center; }
+  @media (min-width:520px){
+    .btn{ min-height:20vh; }
+  }
 </style>
 </head>
 <body>
-<div class="wrap">
-  <h1>QRユーティリティ</h1>
-  <div class="grid">
-    <div class="card">
-      <h2>登録モード</h2>
-      <p>棚(LOC) → 型(DIE) をスキャンして、Sheets と Airtable に一括登録。</p>
-      <!-- 既存の登録ページ名に合わせて href を必要なら変更してください -->
-      <a class="btn primary" href="./scan-register.html">開く</a>
-    </div>
-    <div class="card">
-      <h2>型さがし（照会）</h2>
-      <p>die / order のQRを読み取り、棚位置などを素早く照会。</p>
-      <a class="btn blue" href="./scan-lookup.html">開く</a>
-    </div>
-    <div class="card">
-      <h2>仕様照会</h2>
-      <p>die / order のQRから、Airtable(図面)＋Google Sheets(仕様)を同時表示。</p>
-      <a class="btn amber" href="./scan-spec.html">開く</a>
-    </div>
-  </div>
-  <footer>© Sky & Sea</footer>
-</div>
+  <main class="wrap" role="navigation" aria-label="モード選択">
+    <a class="btn a" href="./scan-spec.html"    aria-label="調べる">調べる</a>
+    <a class="btn b" href="./scan-lookup.html"  aria-label="型を探す">探す</a>
+    <a class="btn c" href="./scan-multi.html"   aria-label="型の場所を登録する">知らせる</a>
+  </main>
 </body>
 </html>
