--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
 <body>
   <main class="wrap" role="navigation" aria-label="モード選択">
     <a class="btn a" href="./scan-spec.html"    aria-label="調べる">調べる</a>
-    <a class="btn b" href="./scan-lookup.html"  aria-label="型を探す">探す</a>
-    <a class="btn c" href="./scan-multi.html"   aria-label="型の場所を登録する">知らせる</a>
+    <a class="btn b" href="./scan-lookup.html"  aria-label="型を探す">型を探す</a>
+    <a class="btn c" href="./scan-multi.html"   aria-label="型の場所を登録する">型の場所を登録する</a>
   </main>
 </body>
 </html>
