--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <main class="wrap" role="navigation" aria-label="モード選択">
     <a class="btn a" href="./scan-spec.html"     aria-label="調べる">調べる</a>
     <a class="btn b" href="./scan-lookup.html"   aria-label="探す">型を探す</a>
-    <a class="btn c" href="./scan-register.html" aria-label="登録する">型の場所を登録する</a>
+    <a class="btn c" href="./scan-register.html" aria-label="登録する">型の場所を知らせる</a>
   </main>
 
 <script>
